--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./src/",
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@pages/*": ["./src/pages/*"],
-      "@styles/*": ["./src/styles/*"]
+      "@components/*": ["components/*"],
+      "@pages/*": ["src/pages/*"],
+      "@styles/*": ["styles/*"]
     }
   }
 }
